--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,40 @@
 * {
-        transition: 0.2s ease-in-out;
-        margin: 0;
-        padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-    font-family: sans-serif;
-    background-color: #2596be;
+	font-family: sans-serif;
+	background-color: #2596be;
 }
 
 #container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 90vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
 }
 
 h1 {
-    color: #eee;
+	color: #eee;
 }
 
 #button {
-    background-color: #eee;
-    color: #222;
-    border: none;
-    padding: 0.8em 1.2em;
-    margin-top: 2em;
+	background-color: #eee;
+	color: #2596be;
+	padding: 1em 1.6em;
+	margin-top: 2em;
+	cursor: pointer;
+	transition: transform 0.2s ease-in-out;
+	text-transform: uppercase;
+	font-weight: bold;
 }
 
 #button:hover {
-    background-color: #222;
-    color: #eee;
+	background-color: #222;
 }
 
 #button:active {
-    border: 3px solid #222;
-    transition: 0.1s ease-in-out;
+	transform: scale(1.1);
 }
